tests/ui/custom_test_frameworks/issue-100263.stderr
error[E0308]: mismatched types
  --> $DIR/issue-100263.rs:9:1
   |
LL | #[test_case]
   | ------------ in this procedural macro expansion
LL | #[issue_100263_macro::test]
LL | fn foo() {}
   | ^^^^^^^^^^^ expected `&TestDescAndFn`, found `&fn() {foo}`
   |
   = note: expected reference `&TestDescAndFn`
              found reference `&fn() {foo}`
   = note: this error originates in the attribute macro `test_case` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
